# questionnaire-eortc-flask

./: .env_flask.example  .gitignore  API_REFERENCE.md  COMPTE_RENDU_CLIENT.md  DATA_MODELS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_flask.md  DEPLOY_FIX_FINAL_flask.md  DEPLOY_FIX_PYGAME_flask.md  DEPLOY_FIX_flask.md  DEPLOY_QUICK_flask.md  DEPLOY_RENDER.md  INTEGRATION_GUIDE.md  LISTE_AUDIOS_flask.md  Procfile  README.md  README_PROFESSIONAL.md  README_flask.md  SETUP_AUDIO_flask.md  STACK_TECHNIQUE.md  app_flask.py  audio_handler_simple_flask.py  audio_handler_web_flask.py  audio_mapping.txt  check_audio_files.py  check_audios.py  config_flask.py  create_audio_mapping.py  create_test_audio.py  create_test_audio_simple.py  debug_session.py  deploy_final.py  deploy_online.py  deploy_simple.py  diagnostic_render.py  generate_audio.py  generate_flask_audios.py  generate_flask_audios_auto.py  generate_flask_audios_simple.py  generate_secret_key.py  (+29 more)
models/: __init__.py  database_flask.py
routes/: __init__.py  api_flask.py  main_flask.py
static/css/: style_flask.css
static/js/: questionnaire_flask.js  speech_recognition_flask.js
templates/: accueil_flask.html  base_flask.html  permission_flask.html  question0_flask.html  questionnaire_flask.html  questionnaire_flask_simple.html  resultat_flask.html
